Fixed title alignment on orderbook
* Added `side` order param to fix condition when title is a different language

--- a/assets/themes/coinage/sass/new/_order.scss
+++ b/assets/themes/coinage/sass/new/_order.scss
@@ -209,6 +209,11 @@
     width: inherit;
 }
 
+.orders__title_center {
+  display: block;
+  float: none;
+}
+
 .orders__status {
     display: table-cell;
     font-size: 13px;
